[gd_scene load_steps=8 format=3 uid="uid://b4pjp03xcqpk4"]

[ext_resource type="Script" uid="uid://daue0g6omc6eo" path="res://Characters/Bar/bar.gd" id="1_cgtd7"]
[ext_resource type="Texture2D" uid="uid://2d26ibg78x2l" path="res://Characters/Bar/Health.svg" id="2_lok1k"]
[ext_resource type="Texture2D" uid="uid://cokao5ent4ibn" path="res://Characters/Bar/Empty Health.svg" id="3_wra31"]
[ext_resource type="Texture2D" uid="uid://bhnpygpo6v0xy" path="res://Characters/Bar/Mana.svg" id="4_m8ufl"]
[ext_resource type="Texture2D" uid="uid://v5nmy54hatxr" path="res://Characters/Bar/Empty Mana.svg" id="5_iexbe"]
[ext_resource type="Texture2D" uid="uid://b3ardr84r13c5" path="res://Characters/Bar/Stamina.svg" id="6_ig0lf"]
[ext_resource type="Texture2D" uid="uid://cxmirgw0tggii" path="res://Characters/Bar/Empty Stamina.svg" id="7_df11l"]

[node name="Bar" type="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 0
offset_right = 648.0
script = ExtResource("1_cgtd7")

[node name="HP" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("2_lok1k")
expand_mode = 1
stretch_mode = 4

[node name="HP_empty" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("3_wra31")
expand_mode = 1
stretch_mode = 4

[node name="Mana" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("4_m8ufl")
expand_mode = 1
stretch_mode = 4

[node name="Mana_empty" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("5_iexbe")
expand_mode = 1
stretch_mode = 4

[node name="Stamina" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("6_ig0lf")
expand_mode = 1
stretch_mode = 4

[node name="Stamina_empty" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
texture = ExtResource("7_df11l")
expand_mode = 1
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
